| Bug #50266 | Failed node/system restart with BuildIndexThreads>1 and > 31 ordered indexes | ||
|---|---|---|---|
| Submitted: | 12 Jan 2010 7:28 | Modified: | 18 Jan 2010 12:44 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-6.3 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[12 Jan 2010 7:28]
Jonas Oreland
[12 Jan 2010 7:33]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/96582 3075 Jonas Oreland 2010-01-12 ndb - bug#50266 - release build idx record at end of mtoib, also init jamidx
[15 Jan 2010 9:06]
Jonas Oreland
pushed to 6.3.31
[18 Jan 2010 12:44]
Jon Stephens
Documented bugfix in the NDB-6.3.31 changelog as follows:
Setting BuildIndexThreads greater than 1 with more than 31
ordered indexes caused node and system restarts to fail.
Closed.
