ndb - bug#50266 - release build idx record at end of mtoib, also init jamidx